--- a/.render.yaml
+++ b/.render.yaml
@@ -4,4 +4,4 @@ services:
     env: python
     pythonVersion: "3.10"
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python ml_embedding_service/app.py"
+    startCommand: "gunicorn -w 4 -b 0.0.0.0:$PORT ml_embedding_service.app:app"
